# reAct-agent

./: .gitignore  README.md  pyproject.toml
config/: config.yml
src/config/: logging.py
src/llm/: gemini.py
src/react/: agent.py
src/tools/: manager.py
src/utils/: io.py
